Reset password functionality working.

--- a/cloudFrontEnd/src/app/change-password/change-password.component.html
+++ b/cloudFrontEnd/src/app/change-password/change-password.component.html
@@ -48,11 +48,11 @@
         </mat-form-field>
       </div>
       <div class="button-container">
-        <button mat-raised-button *ngIf="successMessage==''" [disabled]="anyInvalid()" (click)="formSubmitted()" color="warning">
+        <button mat-raised-button [disabled]="anyInvalid() || successMessage != ''" (click)="formSubmitted()" color="warning">
           Change Password
         </button>
-        <button mat-raised-button *ngIf="successMessage!=''" (click)="exit()" color="default">
-          Exit
+        <button mat-raised-button (click)="exit()" color="default">
+          {{successMessage==''?'Cancel':'Exit'}}
         </button>
       </div>
     </mat-card-content>
