--- a/cloudFrontEnd/src/app/reset-password/reset-password.component.html
+++ b/cloudFrontEnd/src/app/reset-password/reset-password.component.html
@@ -1,1 +1,49 @@
-<p>reset-password works!</p>
+<div class="reset-password-container">
+  <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
+    <mat-card-title>Reset Password</mat-card-title>
+    <mat-card-content>
+      <div class="message-display">
+        <div class="alert-danger mat-elevation-z4"
+             [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
+        <div class="alert-success mat-elevation-z4"
+             [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
+      </div>
+      <div>
+        <mat-form-field appearance="standard">
+          <mat-label>New Password</mat-label>
+          <input matInput type="password" [formControl]="getFormControl('newPassword')"
+                 matTooltip="Enter the new password, this must be between 8 and 32 characters in length and can contain alpha, numeric and special characters"
+                 matTooltipClass="tooltip"
+                 placeholder="New password">
+          <mat-error *ngIf="hasError('newPassword', 'required')">New password is required</mat-error>
+          <mat-error *ngIf="hasError('newPassword', 'pattern')">New password contains invalid characters</mat-error>
+          <mat-error *ngIf="hasError('newPassword', 'tooShort')">New password is too short</mat-error>
+          <!--          <mat-hint>Enter new password</mat-hint>-->
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="standard">
+          <mat-label>Confirm new password</mat-label>
+          <input matInput type="password" [formControl]="getFormControl('confirmNewPassword')"
+                 matTooltip="Enter the new password again"
+                 matTooltipClass="tooltip"
+                 placeholder="Confirm new password">
+          <mat-error *ngIf="hasError('confirmNewPassword', 'required')">Confirm password is required</mat-error>
+          <mat-error *ngIf="hasError('confirmNewPassword', 'confirmNewPassword')">Confirmed new password and New
+            password differ
+          </mat-error>
+          <!--          <mat-hint>Enter new password again</mat-hint>-->
+        </mat-form-field>
+      </div>
+      <div class="button-container">
+        <button mat-raised-button [disabled]="anyInvalid() || successMessage != ''" (click)="formSubmitted()" color="warning">
+          Reset Password
+        </button>
+        <button mat-raised-button (click)="exit()" color="default">
+          {{successMessage==''?'Cancel':'Exit'}}
+        </button>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
+
