--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
@@ -125,3 +125,7 @@ tr.edit-element-row:not(.edit-expanded-row):active {
 .mat-column-nvrConnected {
   width: 6%;
 }
+
+.email-input {
+  width: 38rem;
+}
