--- a/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
+++ b/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="prod_id_input-container" appearance="legacy" [style.width.px]="225">
+<mat-form-field class="prod_id_input-container register-account-input" appearance="legacy">
   <input #productIdCtl matInput type="text" autocomplete="off" maxlength="19"
          [formControl]="getFormControl()"
          (focus)="setFocus()"
