--- a/cloudFrontEnd/src/styles.scss
+++ b/cloudFrontEnd/src/styles.scss
@@ -172,3 +172,11 @@ div.message-display {
     flex-grow: 2;
   }
 }
+
+.email-input {
+  width: 30rem;
+}
+
+.register-account-input {
+  width: 15rem
+}
