--- a/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.html
+++ b/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.html
@@ -8,7 +8,7 @@
         <div class="alert-success mat-elevation-z4" [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
       </div>
       <div>
-        <mat-form-field appearance="legacy" >
+        <mat-form-field appearance="legacy" class="email-input">
           <input #email matInput type="text" autocomplete="off" maxlength="60"
                  [formControl]="getFormControl('email')"
                  (beforeinput)="confirmOnReturn($event)"
