--- a/cloudFrontEnd/src/app/register-account/register-account.component.html
+++ b/cloudFrontEnd/src/app/register-account/register-account.component.html
@@ -7,7 +7,7 @@
         <div class="alert-success mat-elevation-z4" [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
       </div>
      <div>
-        <mat-form-field appearance="legacy" [style.width.px]="225">
+        <mat-form-field appearance="legacy" class="register-account-input">
           <input #username matInput type="text" autocomplete="off" maxlength="20"
                  [formControl]="getFormControl('username')"
                  (keypress)="confirmOnReturn($event)"
@@ -23,7 +23,7 @@
       <br>
       <app-product-id-input [formControl]="getFormControl('productId')"></app-product-id-input>
       <div>
-        <mat-form-field appearance="legacy" [style.width.px]="225">
+        <mat-form-field appearance="legacy" class="register-account-input">
           <input matInput type="password" autocomplete="off" maxlength="25"
                  [formControl]="getFormControl('password')"
                  (keypress)="confirmOnReturn($event)"
@@ -39,7 +39,7 @@
       </div>
       <br>
       <div>
-        <mat-form-field appearance="legacy" [style.width.px]="225">
+        <mat-form-field appearance="legacy" class="register-account-input">
           <input matInput type="password" autocomplete="off" maxlength="25"
                  [formControl]="getFormControl('confirmPassword')"
                  (keypress)="confirmOnReturn($event)"
@@ -54,7 +54,7 @@
       </div>
       <br>
       <div>
-        <mat-form-field appearance="legacy" [style.width.px]="225">
+        <mat-form-field appearance="legacy" class="email-input">
           <input matInput type="email" autocomplete="off" maxlength="40"
                  [formControl]="getFormControl('email')"
                  (keypress)="confirmOnReturn($event)"
@@ -69,7 +69,7 @@
       </div>
       <br>
       <div>
-        <mat-form-field appearance="legacy" [style.width.px]="225">
+        <mat-form-field appearance="legacy" class="email-input">
           <input matInput type="email" autocomplete="off" maxlength="40"
                  [formControl]="getFormControl('confirmEmail')"
                  (keypress)="confirmOnReturn($event)"
