--- a/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.html
+++ b/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.html
@@ -9,7 +9,7 @@
       </div>
       <div>
         <mat-form-field appearance="legacy" class="email-input">
-          <input #email matInput type="text" autocomplete="off" maxlength="60"
+          <input matInput type="text" autocomplete="off" maxlength="60"
                  [formControl]="getFormControl('email')"
                  (beforeinput)="confirmOnReturn($event)"
                  matTooltip="Enter your email address."
