--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
@@ -34,6 +34,10 @@ table {
 }
 
 .check-box {
+  background-color: #323232;
+}
+
+.delete-button {
   background: linear-gradient(90deg, #323232 95%, #424242 95%);
 }
 
