--- a/cloudFrontEnd/src/styles.scss
+++ b/cloudFrontEnd/src/styles.scss
@@ -167,6 +167,7 @@ mat-card.hide-background {
 
 div.message-display {
   display: flex;
+  margin-bottom: 1rem;
   > div {
     margin-bottom: 1rem;
     flex-grow: 2;
