--- a/cloudFrontEnd/src/app/get-local-wifi-details/get-local-wifi-details.component.html
+++ b/cloudFrontEnd/src/app/get-local-wifi-details/get-local-wifi-details.component.html
@@ -8,7 +8,9 @@
         <!-- In Use Column -->
         <ng-container matColumnDef="InUse">
           <th mat-header-cell *matHeaderCellDef>In Use</th>
-          <td mat-cell *matCellDef="let element"> {{element.in_use}} </td>
+          <td mat-cell *matCellDef="let element">
+            <mat-icon class="in-use-check-mark" *ngIf="element.in_use">check_circle</mat-icon>
+          </td>
         </ng-container>
 
         <!-- BSSID Column -->
@@ -20,7 +22,7 @@
         <!-- SSID Column -->
         <ng-container matColumnDef="Ssid">
           <th mat-header-cell *matHeaderCellDef>SSID</th>
-          <td mat-cell *matCellDef="let element"> {{element.ssid}} </td>
+          <td mat-cell *matCellDef="let element"> <span [ngClass]="{'highlight': element.in_use}">{{element.ssid}}</span> </td>
         </ng-container>
 
         <!-- Mode Column -->
