--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -85,6 +85,9 @@
             <button mat-menu-item (click)="getLocalWifiDetails(); menuClosed()">
               Local Wifi Details
             </button>
+            <button mat-menu-item (click)="wifiSettings(); menuClosed()">
+              Wifi Settings
+            </button>
           </mat-menu>
         </ng-container>
         <div *ngIf="!utilsService.isAdmin" class="dropdown-divider"></div>
