--- a/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
+++ b/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
@@ -1,17 +1,32 @@
-<div>
+<div class="wifi-settings-container">
   <mat-card>
     <mat-card-title>Wifi Settings</mat-card-title>
     <mat-card-content>
+      <div class="alert-warning" *ngIf="ethernetConnectionStatus == 'NOT_CONNECTED_VIA_ETHERNET'">
+        You have an Ethernet connection, but your NVR is connected to the Cloud service through Wi-Fi.
+        To make changes to the Wi-Fi settings, this connection must be through Ethernet. To switch the connection to Ethernet,
+        click the Reset Connection button, then log in again.
+      </div>
+
+      <div class="alert-warning" *ngIf="ethernetConnectionStatus == 'NO_ETHERNET'">
+        You have no Ethernet connection available,
+        To make changes to the Wi-Fi settings, the NVR must be connected to the Cloud Service through Ethernet.
+        To switch the connection to Ethernet, connect an Ethernet cable between your router and the NVR then
+        click the Reset Connection button, then log in again.
+      </div>
+      <div class="reset-connection-button">
+        <button *ngIf="ethernetConnectionStatus != 'CONNECTED_VIA_ETHERNET'" color="warning" mat-flat-button (click)="resetConnection()">Reset Connection</button>
+      </div>
       <app-reporting [embedded]="true"></app-reporting>
       <div *ngIf="!wifiEnabled">Wifi Is Disabled</div>
       <mat-checkbox [color]="'primary'" [checked]="wifiEnabled"
-                    [disabled]="false"
+                    [disabled]="ethernetConnectionStatus != 'CONNECTED_VIA_ETHERNET'"
                     (change)="setWifiStatus($event)">
         {{wifiEnabled ? 'Disable' : 'Enable'}} WiFi
       </mat-checkbox>
       <div *ngIf="wifiEnabled">
         {{wifiEnabled ? currentWifiConnection.accessPoint : "&ltWiFi Off&gt"}}
-       </div>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
