Start connect to Wi-Fi network work, including detecting when to request password.

--- a/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
+++ b/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
@@ -42,6 +42,12 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <div>
+          <button [disabled]="!wifiEnabled || currentWifiConnection.accessPoint == selector.value"
+                  mat-flat-button
+                  color="warn"
+          (click)="connect()">Connect</button>
+        </div>
       </div>
     </mat-card-content>
   </mat-card>
